--- a/decor.ipynb
+++ b/decor.ipynb
@@ -70,7 +70,7 @@
         "So if we decorate instance methods, we should manually add class instance ***fn_object*** to arguments: <code>fn_object.print_val_args( ***fn_object***, 'No subject' )</code> <br>\n",
         "Is there any way how to avoid it (using <code>class decor:...</code>)? <br>\n",
         "But, opposite to \"classic\" decorator <code>def decor</code>, no problems with static method...<br>\n",
-        "Why??? Where to read?"
+        "Why???"
       ]
     },
     {
