--- a/decor.ipynb
+++ b/decor.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---\n",
-        "\n",
-        "What is the problem with decorating the static method <code>def print_args(*args)</code>? <br>\n",
-        "Why we have <code><__main__.original_fn object></code> in **\\*args**? <br>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -20,7 +10,7 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "<bound method original_fn.print_val of <__main__.original_fn object at 0x065D8670>>\nval  :  val\n\n<bound method decor.<locals>.wrapper of <__main__.original_fn object at 0x065D8670>>\nSubject  :  <__main__.original_fn object at 0x065D8670> No subject\nsome text after function\n\n<bound method decor.<locals>.wrapper of <__main__.original_fn object at 0x065D8670>>\nval  :  val\nSubject  :  No subject\nsome text after function\n"
+          "text": "<bound method original_fn.print_val of <__main__.original_fn object at 0x071EF538>>\nval  :  val\nSubject  :  No subject\n\n<bound method decor.<locals>.wrapper of <__main__.original_fn object at 0x071EF538>>\nval  :  val\nSubject  :  No subject\nsome text after function\n"
         }
       ],
       "source": [
@@ -34,15 +24,17 @@
         "    def __init__(self):\n",
         "        self.val = 'val'\n",
         "\n",
-        "    def print_val(self, *args): #instance method\n",
+        "    def print_val(self, *args): #instance method w/o decor\n",
         "        print(\"val  : \", self.val)\n",
-        "\n",
+        "        print(\"Subject  : \", *args)\n",
+        "    \n",
+        "    @staticmethod\n",
         "    @decor\n",
-        "    def print_args(*args): #static method\n",
-        "        print(\"Subject  : \", *args)  \n",
-        "\n",
+        "    def print_args(*args):  # static method\n",
+        "        print(\"Subject  : \", *args)\n",
+        "        \n",
         "    @decor\n",
-        "    def print_val_args(self, *args): #instance method\n",
+        "    def print_val_args(self, *args): #instance method with decorator\n",
         "        print(\"val  : \", self.val)\n",
         "        print(\"Subject  : \", *args)\n",
         "\n",
@@ -50,10 +42,6 @@
         "\n",
         "print(fn_object.print_val) #<bound method original_fn.print_val of <__main__.original_fn object>>\n",
         "fn_object.print_val( 'No subject' )\n",
-        "print()\n",
-        "\n",
-        "print(fn_object.print_args) #<bound method decor.<locals>.wrapper of <__main__.original_fn object>>\n",
-        "fn_object.print_args( 'No subject' )\n",
         "print()\n",
         "\n",
         "print(fn_object.print_val_args) #<bound method decor.<locals>.wrapper of <__main__.original_fn object>>\n",
@@ -69,13 +57,12 @@
         "After the method is decorated (using <code>class decor:...</code>) binding with the object lost? <br>\n",
         "So if we decorate instance methods, we should manually add class instance ***fn_object*** to arguments: <code>fn_object.print_val_args( ***fn_object***, 'No subject' )</code> <br>\n",
         "Is there any way how to avoid it (using <code>class decor:...</code>)? <br>\n",
-        "But, opposite to \"classic\" decorator <code>def decor</code>, no problems with static method...<br>\n",
         "Why???"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {
         "tags": []
       },
@@ -83,7 +70,7 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "<bound method original_fn.print_val of <__main__.original_fn object at 0x065E45E0>>\nval  :  val\n\n<__main__.decor object at 0x065E4688>\nSubject  :  No subject\nsome text after function\n\n<function original_fn.print_args at 0x0698FBF8>\nSubject  :  No subject\n\n<__main__.decor object at 0x065E46D0>\nval  :  val\nSubject  :  No subject\nsome text after function\n\n<function original_fn.print_val_args at 0x0698FAD8>\nval  :  val\nSubject  :  No subject\n"
+          "text": "<bound method original_fn.print_val of <__main__.original_fn object at 0x071EFA48>>\nval  :  val\nSubject  :  No subject\n\n<__main__.decor object at 0x071EFA78>\nval  :  val\nSubject  :  No subject\nsome text after function\n\n<function original_fn.print_val_args at 0x073FEDA8>\nval  :  val\nSubject  :  No subject\n"
         }
       ],
       "source": [
@@ -99,37 +86,35 @@
         "    def __init__(self):\n",
         "        self.val = 'val'\n",
         "\n",
-        "    def print_val(self, *args): #instance method\n",
+        "    def print_val(self, *args): #instance method w/o decor\n",
         "        print(\"val  : \", self.val)\n",
+        "        print(\"Subject  : \", *args)\n",
+        "\n",
+        "    @staticmethod\n",
+        "    @decor\n",
+        "    def print_args(*args):  # static method\n",
+        "        print(\"Subject  : \", *args)\n",
         "\n",
         "    @decor\n",
-        "    def print_args(*args): #static method\n",
-        "        print(\"Subject  : \", *args)  \n",
-        "\n",
-        "    @decor\n",
-        "    def print_val_args(self, *args): #instance method\n",
+        "    def print_val_args(self, *args): #instance method with decorator\n",
         "        print(\"val  : \", self.val)\n",
         "        print(\"Subject  : \", *args)\n",
         "\n",
         "fn_object = original_fn()\n",
         "\n",
-        "print(fn_object.print_val) #<bound method original_fn.print_val of <__main__.original_fn object>>\n",
+        "#<bound method original_fn.print_val of <__main__.original_fn object>>\n",
+        "print(fn_object.print_val)\n",
         "fn_object.print_val( 'No subject' )\n",
         "print()\n",
         "\n",
-        "print(fn_object.print_args) #<__main__.decor object>\n",
-        "fn_object.print_args( 'No subject' )\n",
-        "print()\n",
         "\n",
-        "print(fn_object.print_args.origin) #<function original_fn.print_args>\n",
-        "fn_object.print_args.origin( 'No subject' )\n",
-        "print()\n",
-        "\n",
-        "print(fn_object.print_val_args) #<__main__.decor object>\n",
+        "#<__main__.decor object>\n",
+        "print(fn_object.print_val_args) \n",
         "fn_object.print_val_args( fn_object, 'No subject' )\n",
         "print()\n",
         "\n",
-        "print(fn_object.print_val_args.origin) #<function original_fn.print_val_args>\n",
+        "#<function original_fn.print_val_args>\n",
+        "print(fn_object.print_val_args.origin) \n",
         "fn_object.print_val_args.origin( fn_object, 'No subject' )"
       ]
     }
