--- a/M8_HW_IntroPy_V2.ipynb
+++ b/M8_HW_IntroPy_V2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 246,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -29,7 +29,7 @@
         "            print( \"Found: {0}\".format(' '.join(cr).title()) )\n",
         "            print( \"Not Found: {0}\".format(' '.join(wr).title()) )"
       ],
-      "execution_count": 247,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
         "            self.success_rate = {subject : len(correct_responses)/len(responses[subject].values())}\n",
         "        return correct_responses, wrong_responses, self.success_rate"
       ],
-      "execution_count": 249,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "    def get_answer(self):\n",
         "        return input(\"My answer: \").lower().strip()"
       ],
-      "execution_count": 250,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
         "        self.teacher = None #LearnGroup HAS teacher\n",
         "        self.questions_qty = None"
       ],
-      "execution_count": 248,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -167,6 +167,7 @@
       },
       "cell_type": "code",
       "source": [
+        "students = {}\n",
         "students[Student(1, 'John Smith',Testing()).id] = Student(1, 'John Smith',Testing())\n",
         "students[Student(2, 'Jane Doe',Testing()).id] = Student(2, 'Jane Doe',Testing())\n",
         "\n",
@@ -176,7 +177,7 @@
         "some_group.students = students\n",
         "some_group.teacher = teacher"
       ],
-      "execution_count": 251,
+      "execution_count": 8,
       "outputs": []
     },
     {
